--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
           <button type="button" class="btn btn-link">Send message</button>
         </form>
       </div>
-      <div class="col-1">
+      <div class="col-12 col-sm-1">
         <ul class="list-unstyled social-discuss">
           <li><a class="icon-google-plus" href="#"></a></li>
           <li><a class="icon-twitter" href="#"></a></li>
